# quant-hedge-fund

./: .eslintignore  .gitignore  APP_GUIDE.md  GEMINI.md  LICENSE  README.md  eslint.config.mjs  frontend-integration.md  next.config.ts  package-lock.json  package.json  pyrightconfig.json  start.sh  tsconfig.json
backend/: .dockerignore  .gitignore  Dockerfile  README.md  debug_ai.py  debug_factors.py  debug_nvda.py  docker-compose.yml  main.py  mlflow.db  pyproject.toml  requirements.txt  run_trading_node.py  start_hedge_fund.py  test_output.txt  test_ratios.py  verify_f_score.py  verify_new_assets.py
backend/.github/workflows/: ci.yml
backend/api/routers/: ai.py  backtest.py  data.py  governance.py  live.py  main_router.py  research.py  screener.py  search.py  status.py  tactical.py
backend/automation/: __init__.py  deployment_manager.py  prefect_flows.py
backend/config/: __init__.py  assets.yaml  constants.py  logging_config.py  registry.py  risk_limits.yaml  scanners.yaml  settings.py
backend/dashboard/: __init__.py  app.py
backend/data/: ingest_state.json  system_state.json
backend/docs/: DOCUMENTATION.md  GLOBAL_FILINGS_REFERENCE.md  IB_PRODUCTION_CHECKLIST.md  PRE_LIVE_CHECKLIST.md
backend/omega/: __init__.py  ai_service.py  risk_engine.py  singleton.py  trading_app.py
backend/omega/broker/: alpaca.py  base.py  (+1 more)
backend/qsconnect/: __init__.py  client.py  emergency.py
backend/qsresearch/: __init__.py
backend/scripts/: check_ticker_mismatches.py  debug_agg.py  debug_cik_list.py  debug_profiles.py  debug_simfin_meta.py  download_initial_data.py  force_aggregate.py  ingest_hedge_funds.py  ingest_holdings_detail.py  ingest_simfin.py  init_db.py  reanchor_universe.py  repair_db.py  repair_stitched_data.py  run_aggregation.py  seed_sector_perf.py  setup_database.py  simulate_realtime_inference.py  start_dashboard.py  start_fmp_feed.py  start_mock_feed.py  start_trading_engine.py  start_twelvedata_feed.py  update_factors.py  update_top_funds.py
backend/tests/: conftest.py  test_candle_engine.py  test_client.py  test_emergency.py  test_momentum.py  test_risk_engine.py  test_scheduler.py  test_trading_app.py
backend/workflow/: __init__.py  luigi.cfg
(+220 files in other folders)
